[gd_scene load_steps=41 format=2]

[ext_resource path="res://scripts/player/states/rolling_player_state.gd" type="Script" id=1]
[ext_resource path="res://scripts/player/states/air_player_state.gd" type="Script" id=2]
[ext_resource path="res://scripts/player/states/regular_player_state.gd" type="Script" id=3]
[ext_resource path="res://scripts/player/states/braking_player_state.gd" type="Script" id=4]
[ext_resource path="res://scripts/player/resources/player_stats.gd" type="Script" id=5]
[ext_resource path="res://sprites/players/sonic.png" type="Texture" id=6]
[ext_resource path="res://scripts/player/player_state_machine.gd" type="Script" id=7]
[ext_resource path="res://scripts/player/resources/player_collision.gd" type="Script" id=8]
[ext_resource path="res://scripts/player/player.gd" type="Script" id=9]
[ext_resource path="res://scripts/player/player_skin.gd" type="Script" id=10]
[ext_resource path="res://scripts/player/states/spring_player_state.gd" type="Script" id=11]
[ext_resource path="res://scripts/player/player_audio.gd" type="Script" id=12]
[ext_resource path="res://objects/audios/SpinAudio.tscn" type="PackedScene" id=13]
[ext_resource path="res://objects/audios/BrakeAudio.tscn" type="PackedScene" id=14]
[ext_resource path="res://objects/audios/JumpAudio.tscn" type="PackedScene" id=15]
[ext_resource path="res://objects/shields/insta_shield.tscn" type="PackedScene" id=16]
[ext_resource path="res://scripts/shields/shields_manager.gd" type="Script" id=17]
[ext_resource path="res://objects/shields/blue_shield.tscn" type="PackedScene" id=18]
[ext_resource path="res://objects/shields/thunder_shield.tscn" type="PackedScene" id=19]
[ext_resource path="res://objects/shields/flame_shield.tscn" type="PackedScene" id=20]

[sub_resource type="Resource" id=1]
script = ExtResource( 8 )
offset = Vector2( 0, 0 )
height_radius = 19.0
width_radius = 9.0
push_height_offset = 8.0
push_radius = 1.0
ground_extension = 17.0

[sub_resource type="Resource" id=2]
script = ExtResource( 8 )
offset = Vector2( 0, -5 )
height_radius = 14.0
width_radius = 7.0
push_height_offset = 8.0
push_radius = 3.0
ground_extension = 17.0

[sub_resource type="Resource" id=3]
script = ExtResource( 5 )
acceleration = 168.75
deceleration = 1800.0
friction = 168.75
slope_factor = 450.0
top_speed = 360.0
dash_speed = 600.0
min_speed_to_brake = 240.0
min_speed_to_roll = 60.0
unroll_speed = 30.0
slope_roll_up = 281.25
slope_roll_down = 1125.0
roll_deceleration = 450.0
roll_friction = 84.375
air_acceleration = 337.5
gravity = 787.5
max_jump_height = 390.0
min_jump_height = 240.0
slide_angle = 45.0
fall_angle = 80.0
min_speed_to_fall = 150.0
control_lock_duration = 0.5

[sub_resource type="Animation" id=4]
resource_name = "corkscrew"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71 ]
}

[sub_resource type="Animation" id=5]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 83, 84, 85, 86 ]
}

[sub_resource type="Animation" id=7]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 25, 29, 26, 29, 27, 29, 28, 29 ]
}

[sub_resource type="Animation" id=8]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 21, 22, 23, 24 ]
}

[sub_resource type="Animation" id=9]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 30, 31, 32, 33 ]
}

[sub_resource type="Animation" id=10]
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15, 16, 17, 18, 19, 20 ]
}

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "walking"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "running"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "rolling"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "peel_out"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "skidding"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "corkscrew"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "idle"

[sub_resource type="AnimationNodeTimeScale" id=18]

[sub_resource type="AnimationNodeTransition" id=19]
input_count = 7
input_0/name = "idle"
input_0/auto_advance = false
input_1/name = "walking"
input_1/auto_advance = false
input_2/name = "running"
input_2/auto_advance = false
input_3/name = "peel_out"
input_3/auto_advance = false
input_4/name = "rolling"
input_4/auto_advance = false
input_5/name = "skidding"
input_5/auto_advance = false
input_6/name = "corkscrew"
input_6/auto_advance = false

[sub_resource type="AnimationNodeBlendTree" id=20]
graph_offset = Vector2( -319.42, 164.5 )
nodes/Animation/node = SubResource( 17 )
nodes/Animation/position = Vector2( -140, 160 )
"nodes/Animation 2/node" = SubResource( 11 )
"nodes/Animation 2/position" = Vector2( -140, 280 )
"nodes/Animation 3/node" = SubResource( 12 )
"nodes/Animation 3/position" = Vector2( -140, 400 )
"nodes/Animation 4/node" = SubResource( 13 )
"nodes/Animation 4/position" = Vector2( -140, 640 )
"nodes/Animation 5/node" = SubResource( 14 )
"nodes/Animation 5/position" = Vector2( -140, 520 )
"nodes/Animation 6/node" = SubResource( 15 )
"nodes/Animation 6/position" = Vector2( -140, 760 )
"nodes/Animation 7/node" = SubResource( 16 )
"nodes/Animation 7/position" = Vector2( -140, 880 )
nodes/output/position = Vector2( 580, 380 )
nodes/speed/node = SubResource( 18 )
nodes/speed/position = Vector2( 400, 380 )
nodes/state/node = SubResource( 19 )
nodes/state/position = Vector2( 220, 380 )
node_connections = [ "speed", 0, "state", "state", 0, "Animation", "state", 1, "Animation 2", "state", 2, "Animation 3", "state", 3, "Animation 5", "state", 4, "Animation 4", "state", 5, "Animation 6", "state", 6, "Animation 7", "output", 0, "speed" ]

[node name="Sonic" type="Node2D"]
script = ExtResource( 9 )
bounds = [ SubResource( 1 ), SubResource( 2 ) ]
stats = [ SubResource( 3 ) ]
ground_layer = 3

[node name="StateMachine" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="Regular" type="Node2D" parent="StateMachine"]
script = ExtResource( 3 )

[node name="Rolling" type="Node2D" parent="StateMachine"]
position = Vector2( -212, -716 )
script = ExtResource( 1 )

[node name="Braking" type="Node2D" parent="StateMachine"]
position = Vector2( -212, -716 )
script = ExtResource( 4 )

[node name="Air" type="Node2D" parent="StateMachine"]
script = ExtResource( 2 )

[node name="Spring" type="Node2D" parent="StateMachine"]
script = ExtResource( 11 )

[node name="Shields" type="Node2D" parent="."]
script = ExtResource( 17 )

[node name="InstaShield" parent="Shields" instance=ExtResource( 16 )]

[node name="BlueShield" parent="Shields" instance=ExtResource( 18 )]

[node name="ThunderShield" parent="Shields" instance=ExtResource( 19 )]

[node name="FlameShield" parent="Shields" instance=ExtResource( 20 )]

[node name="Audios" type="Node2D" parent="."]
script = ExtResource( 12 )

[node name="JumpAudio" parent="Audios" instance=ExtResource( 15 )]

[node name="BrakeAudio" parent="Audios" instance=ExtResource( 14 )]

[node name="SpinAudio" parent="Audios" instance=ExtResource( 13 )]

[node name="Skin" type="Sprite" parent="."]
texture = ExtResource( 6 )
hframes = 10
vframes = 10
script = ExtResource( 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Skin"]
anims/corkscrew = SubResource( 4 )
anims/idle = SubResource( 5 )
anims/peel_out = SubResource( 6 )
anims/rolling = SubResource( 7 )
anims/running = SubResource( 8 )
anims/skidding = SubResource( 9 )
anims/walking = SubResource( 10 )

[node name="AnimationTree" type="AnimationTree" parent="Skin"]
tree_root = SubResource( 20 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/speed/scale = 1.0
parameters/state/current = 0
